# lacs

./: .gitignore  .markdown-link-check.json  .markdownlint.json  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  HACKING.md  IMPLEMENTATION_LACS.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  Vagrantfile  book.toml
.claude/: hookify.require-sysknife-approval.md
.github/: CONTRIBUTOR_LICENSE_AGREEMENT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  docs.yml  e2e.yml  release.yml
apps/lacs-cli/: Cargo.toml
apps/lacs-cli/src/: approval.rs  cli.rs  client.rs  error.rs  main.rs  mcp_server.rs  render.rs  runner.rs
apps/lacs-shell/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/lacs-shell/src/: App.test.tsx  App.tsx  daemonBridge.ts  shellState.test.ts  shellState.ts  styles.css  types.ts
apps/lacs-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/lacs-shell/src-tauri/src/: commands.rs  daemon_client.rs  main.rs
apps/sysknife-cli/: Cargo.toml
apps/sysknife-cli/src/: approval.rs  cli.rs  client.rs  error.rs  main.rs  mcp_server.rs  render.rs  runner.rs
apps/sysknife-shell/: package-lock.json  package.json  pnpm-lock.yaml
apps/sysknife-shell/src/: App.tsx  shellState.ts
apps/sysknife-shell/src-tauri/: Cargo.toml  tauri.conf.json
assets/demo/: README.md  demo-mock.sh  demo.tape  mcp-flow-mock.sh  mcp-flow.tape
assets/raster/: README.md
crates/lacs-brain/: Cargo.toml
crates/lacs-brain/src/: action_name.rs  audit.rs  config.rs  journal.rs  lib.rs  planner.rs  prefs.rs  prompt.rs  provider.rs  rate_limit.rs  state_client.rs
crates/lacs-brain/src/planning_tools/: get_state.rs  mod.rs  preferences.rs  propose_plan.rs  query_tools.rs
crates/lacs-brain/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai_adapter.rs  rig_adapter.rs
crates/lacs-brain/tests/: planner.rs
crates/lacs-core/: Cargo.toml
crates/lacs-core/src/: config.rs  lib.rs
crates/lacs-daemon/: Cargo.toml
crates/lacs-daemon/src/: auth.rs  dispatcher.rs  executor.rs  jobs.rs  lib.rs  main.rs  policy.rs  preview.rs  state.rs  state_collector.rs  transactions.rs
crates/lacs-daemon/src/actions/: containers.rs  deployment.rs  filesystem.rs  flatpak.rs  identity.rs  layering.rs  mod.rs  network.rs  package_repos.rs  processes.rs  services.rs  ssh.rs  system_info.rs  toolbox.rs  users.rs  validate.rs
crates/lacs-daemon/src/transport/: grpc.rs
crates/lacs-daemon/tests/: accept_loop.rs  action_consistency.rs  actions_batch1.rs  actions_batch2.rs  bootstrap.rs  coverage_gaps.rs  lifecycle_events.rs  preview_approval.rs  rollback.rs
crates/lacs-proto/: Cargo.toml  build.rs
crates/lacs-proto/src/: lib.rs
crates/lacs-proto/tests/: generated_types.rs
crates/lacs-types/: Cargo.toml
crates/lacs-types/src/: lib.rs
crates/lacs-types/tests/: proto_bridge.rs  schema_roundtrip.rs
crates/sysknife-brain/: Cargo.toml
crates/sysknife-brain/src/: action_name.rs  audit.rs  config.rs  journal.rs  lib.rs  planner.rs  prefs.rs  prompt.rs  rate_limit.rs  sanitize.rs  state_client.rs
crates/sysknife-brain/tests/: planner.rs
crates/sysknife-core/: Cargo.toml
crates/sysknife-core/src/: config.rs  distro.rs  lib.rs
crates/sysknife-daemon/: Cargo.toml
crates/sysknife-daemon-test/: Cargo.toml
crates/sysknife-daemon-test/src/: main.rs
crates/sysknife-daemon/src/: audit_chain.rs  audit_forward.rs  auth.rs  dispatcher.rs  distro.rs  executor.rs  jobs.rs  lib.rs  main.rs  policy.rs  preview.rs  state.rs  store.rs  transactions.rs
crates/sysknife-daemon/src/actions/: apparmor.rs  apt.rs  containers.rs  deployment.rs  distrobox.rs  fail2ban.rs  filesystem.rs  flatpak.rs  grub.rs  identity.rs  layering.rs  layering_ubuntu.rs  mod.rs  netplan.rs  network.rs  package_repos.rs  reboot.rs  release_upgrade.rs  resolvectl.rs  services.rs  snap.rs  ssh.rs  toolbox.rs  ubuntu_pro.rs  ufw.rs  users.rs  validate.rs
crates/sysknife-daemon/src/store/: postgres.rs
crates/sysknife-daemon/tests/: accept_loop.rs  action_consistency.rs  actions_batch1.rs  actions_batch2.rs  bootstrap.rs  coverage_gaps.rs  execute_spec.rs  lifecycle_events.rs  preview_approval.rs  query_action_exit_codes.rs  rollback.rs  ssh_key_ops.rs
crates/sysknife-proto/: Cargo.toml
crates/sysknife-types/: Cargo.toml
crates/sysknife-types/src/: lib.rs
crates/sysknife-types/tests/: proto_bridge.rs  schema_roundtrip.rs
docs/: SUMMARY.md  actions.md  architecture.md  cli.md  developer-guide.md  distro-support.md  introduction.md  mcp.md  quickstart.md  release.md  storage-cloud.md  user-stories.md  vm-daemon-setup.md
docs/adr/: 0001-system-boundaries.md  0002-brain-provider-layer.md  0003-ipc-wire-protocol.md
docs/contributing/: CONTRIBUTING.md  testing.md  ubuntu-vm-testing.md
docs/demo/: demo-script.md
docs/launch/: README.md  devto-article.md  medium-article.md  reddit-r-linux.md  reddit-r-programming.md  reddit-r-selfhosted.md  research-notes.md  show-hn.md  twitter-thread.md
docs/local/: mvp-gaps-and-growth.md
docs/plans/: 2026-04-10-lacs-daemon-ipc-spec.md  2026-04-10-lacs-implementation-plan.md  2026-04-10-lacs-spec.md
docs/superpowers/plans/: 2026-04-10-execution-pipeline.md  2026-04-10-ux-error-flows.md  2026-04-12-intelligent-planning.md  2026-04-14-job-history-query.md  2026-04-14-user-preference-memory.md
docs/superpowers/specs/: 2026-04-10-ux-error-flows-design.md
docs/testing/: user-stories.md
packaging/: 50-lacs.rules  50-sysknife.rules  lacs-daemon.service  lacs-sudoers  lacs-sysusers.conf  lacs-tmpfiles.conf  sysknife-daemon.service  sysknife-sudoers  sysknife-sysusers.conf
packaging/flatpak/: README.md  org.lacsfoundation.LacsShell.json
scripts/: check_repo_completeness.sh
tests/e2e/: atomic-vm.sh  dev-stories.sh  provision.sh  run-stories.sh  silverblue-vm.sh  ubuntu-provision.sh  ubuntu-vm.conf  ubuntu-vm.sh
tests/e2e/exec/: exec-11.sh  exec-7.sh  run-exec-stories.sh
(+73 files in other folders)
