[workspace]
resolver = "2"
members = [
  "crates/lacs-core",
  "crates/lacs-daemon",
  "crates/lacs-proto",
  "crates/lacs-types",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/lacs-foundation/lacs"

[workspace.dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
