[workspace]
resolver = "2"
members = [
  "crates/lacs-core",
  "crates/lacs-brain",
  "crates/lacs-daemon",
  "crates/lacs-proto",
  "crates/lacs-types",
  "apps/lacs-shell/src-tauri",
  "apps/lacs-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/lacs-foundation/lacs"

[workspace.dependencies]
async-trait = "0.1"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
