[package]
name = "lacs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lacs"
path = "src/main.rs"

[dependencies]
lacs-brain = { path = "../../crates/lacs-brain" }
lacs-types = { path = "../../crates/lacs-types" }

clap = { version = "4", features = ["derive"] }
clap_complete = "4"
strip-ansi-escapes = "0.2"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal", "net", "io-util"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
