[package]
name = "lacs-brain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = "0.3"
lacs-core = { path = "../lacs-core" }
lacs-types = { path = "../lacs-types" }
async-openai = { version = "0.34", features = ["chat-completion"] }
rig-core = "0.34.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
