[package]
name = "lacs-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lacs-types = { path = "../lacs-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"

