[package]
name = "lacs-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lacs-core = { path = "../lacs-core" }
lacs-types = { path = "../lacs-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.10"

[dev-dependencies]
lacs-brain = { path = "../lacs-brain" }
serde_json = { workspace = true }
tempfile = "3"
