[package]
name = "lacs-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared action type definitions for LACS — reusable in third-party tooling"
keywords = ["llm", "ai-agent", "linux", "actions", "types"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
lacs-proto = { path = "../lacs-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
