[package]
name = "sysknife-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sysknife-core = { path = "../sysknife-core" }
sysknife-types = { path = "../sysknife-types" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
tokio-vsock = "0.7.2"

[dev-dependencies]
sysknife-brain = { path = "../sysknife-brain" }
serde_json = { workspace = true }
tempfile = "3"
