[package]
name = "lacs-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lacs-brain = { path = "../../../crates/lacs-brain" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.5.6" }
thiserror = { workspace = true }

[build-dependencies]
tauri-build = "2.5.6"
