[package]
name = "lacs-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable the hardcoded Silverblue fixture state client.
# Active by default until a real daemon IPC client is implemented.
default = ["demo"]
demo = []

[dependencies]
lacs-brain = { path = "../../../crates/lacs-brain" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.5.6" }
thiserror = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
tauri-build = "2.5.6"
